# LLMPerfOracle

./: .gitignore  CLAUDE.md  README.md  heavy_workload_summary.md  parallelization_summary.md  pyproject.toml  requirements.txt  run_all_gh200_experiments.py  run_quick_comparison.py  run_regression_tests.py  setup.py  test_all_heavy_workload.py  test_single_gpu_reasonable_load.py  test_tp8_heavy.py  test_tp8_reasonable_load.py  test_tp8_vs_single_heavy.py  tp8_heavy_workload_analysis.md
configs/: example_cross_request_caching.yaml  example_parallel_experiment.yaml  example_prefix_caching.yaml  gh200_experiment_dp8.yaml  gh200_experiment_tp2pp2dp2.yaml  gh200_experiment_tp4pp2.yaml  lod_test_single_gpu.yaml  model_params.json  test_parallel_quick.yaml
configs/examples/: example_cross_request_caching.yaml  example_experiment.yaml  example_parallel_experiment.yaml  walkthrough_example.yaml
configs/experiments/: gh200_experiment_pp8.yaml  gh200_experiment_single.yaml  gh200_experiment_tp2dp4.yaml  gh200_experiment_tp8.yaml  gh200_hardware.yaml  lod_test_tp2pp2.yaml  (+1 more)
docs/: README.md  configuration_validation.md  cross_request_caching_implementation.md  hardware_efficiency.md  lod_performance_results.md  model_library.md  parallelism_testing_guide.md  performance_abstractions_implementation.md  prefix_caching_implementation.md  prefix_caching_implementation_status.md  prefix_caching_summary.md  prefix_caching_test_results.md  simulation_walkthrough.md  test_fixes_summary.md  workload_generator_enhancement.md
tests/: README.md  __init__.py  test_basic_simulation.py
(+69 files in other folders)
