[tool.poetry]
name = "llmperforacle"
version = "0.1.0"
description = "A virtualized environment for comparative performance analysis of LLM serving frameworks"
authors = ["LLMPerfOracle Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
simpy = "^4.0"
numpy = "^1.24"
pandas = "^2.0"
pyyaml = "^6.0"
pydantic = "^2.0"
matplotlib = "^3.7"
seaborn = "^0.12"
scipy = "^1.10"
click = "^8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.21"
pytest-cov = "^4.1"
black = "^23.7"
isort = "^5.12"
flake8 = "^6.1"
mypy = "^1.5"
pre-commit = "^3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true